from django.db import models


class Department(models.Model):
    name = models.CharField(max_length=50, null=False, blank=False, unique=True)

    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    def __str__(self):
        return self.name

    def __repr__(self):
        return f"<Department: {self.name}>"

    class Meta:
        db_table = "departments"
        verbose_name = "Department"
        verbose_name_plural = "Departments"
        ordering = ["name"]
        indexes = [
            models.Index(fields=["name"]),
        ]
